Annotate non-nulls in multi-map